Add signup form

--- a/index.html
+++ b/index.html
@@ -8,15 +8,49 @@
 </head>
 <body>
     <h1></h1>
-    <input type="text" id="email">
-    <input type="text" id="password"> 
-    <button type="button" id="signin_button" class="buttons">Log In</button>
-    <button type="button" id="signup_button" class="buttons">Creat New Account</button>
+    <div id="front_page">
+        <h1>Facebook</h1>
+        <input type="text" id="email">
+        <input type="text" id="password"> 
+        <button type="button" id="signin_button" class="buttons">Log In</button>
+        <button type="button" id="createaccount_button" class="buttons">Creat New Account</button>
+    </div>
+    <div id="signup_form">
+        <div class = "input">
+            <input type="text" id = "first_name">
+        </div>
+        <div class = "input">
+            <input type="text" id = "last_name">
+        </div>
+        <div class = "input">
+            <input type="text" id = "dob">
+        </div>
+        <div class = "input">
+            <input type="text" id = "email">
+        </div>
+        <div class = "input">
+            <input type="text" id = "password">
+        </div>
+        <div class = "input">
+            <input type="text" id = "profile_picture">
+        </div>
+        <div class = "input">
+            <input type="text" id = "country">
+        </div>
+        <div class = "input">
+            <input type="text" id = "city">
 
-
+        </div>
+        <div class = "input">
+            <input type="text" id = "street">
+        </div>
+        <button type="button" id="signup_button" class="buttons">Sign Up</button>
+    </div>
 
 
     <script src="Javascript/signin.js"></script></body>
+    <script src="Javascript/signup.js"></script></body>
+
 
 </body>
 </html>
