--- a/index.html
+++ b/index.html
@@ -10,39 +10,40 @@
     <h1></h1>
     <div id="front_page">
         <h1>Facebook</h1>
-        <input type="text" id="email">
-        <input type="text" id="password"> 
+        <p></p>
+        <input type="text" id="email" placeholder="Enter your Email">
+        <input type="password" id="password" placeholder="Enter your Password"> 
         <button type="button" id="signin_button" class="buttons">Log In</button>
         <button type="button" id="createaccount_button" class="buttons">Creat New Account</button>
     </div>
     <div id="signup_form">
         <div class = "input">
-            <input type="text" id = "first_name">
+            <input type="text" id = "first_name" placeholder="First Name">
         </div>
         <div class = "input">
-            <input type="text" id = "last_name">
+            <input type="text" id = "last_name" placeholder="Last Name">
         </div>
         <div class = "input">
-            <input type="text" id = "dob">
+            <input type="text" id = "dob" placeholder="Date of Birth">
         </div>
         <div class = "input">
-            <input type="text" id = "email">
+            <input type="text" id = "email" placeholder="Email">
         </div>
         <div class = "input">
-            <input type="text" id = "password">
+            <input type="text" id = "password" placeholder="Password">
         </div>
         <div class = "input">
-            <input type="text" id = "profile_picture">
+            <input type="text" id = "profile_picture" placeholder="Upload Picture">
         </div>
         <div class = "input">
-            <input type="text" id = "country">
+            <input type="text" id = "country" placeholder="Country">
         </div>
         <div class = "input">
-            <input type="text" id = "city">
+            <input type="text" id = "city" placeholder="City">
 
         </div>
         <div class = "input">
-            <input type="text" id = "street">
+            <input type="text" id = "street" placeholder="Street">
         </div>
         <button type="button" id="signup_button" class="buttons">Sign Up</button>
     </div>
