Edit input id and picture upload

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div id="front_page">
         <h1>Facebook</h1>
         <p></p>
-        <input type="text" id="email" placeholder="Enter your Email">
-        <input type="password" id="password" placeholder="Enter your Password"> 
+        <input type="text" id="email1" placeholder="Enter your Email">
+        <input type="password" id="password1" placeholder="Enter your Password"> 
         <button type="button" id="signin_button" class="buttons">Log In</button>
         <button type="button" id="createaccount_button" class="buttons">Creat New Account</button>
     </div>
@@ -27,13 +27,15 @@
             <input type="text" id = "dob" placeholder="Date of Birth">
         </div>
         <div class = "input">
-            <input type="text" id = "email" placeholder="Email">
+            <input type="text" id = "email2" placeholder="Email">
         </div>
         <div class = "input">
-            <input type="text" id = "password" placeholder="Password">
+            <input type="text" id = "password2" placeholder="Password">
         </div>
         <div class = "input">
-            <input type="text" id = "profile_picture" placeholder="Upload Picture">
+            <label for="profilpicture">Select a picture:</label>
+            <input type="file" id="profile_picture" name="profile_picture">
+            <button type="button" id="profilepicture_button" class="buttons">Upload</button>
         </div>
         <div class = "input">
             <input type="text" id = "country" placeholder="Country">
