--- a/HTML/homepage.html
+++ b/HTML/homepage.html
@@ -9,18 +9,18 @@
 <body>
     <h1></h1>
     <div class="nav_bar"></div>
+    <div class="side_bar"></div>
+
     <div class="add_status">
         <input type="text" id="post_status">
-        <button type="button" id="post" class="buttons">Post</button>
+        <button type="button" id="post_button" class="buttons">Post</button>
+        <div class="post_container"></div>
     </div>
-    <div class="side_bar"></div>
-    <div class="feed">
+    <div id="feed">
 
     </div>
         
-        
-
-    </div>
+    <script src="Javascript/addstatus.js"></script></body>
 
 </body>
 </html>
