--- a/homepage.html
+++ b/homepage.html
@@ -9,7 +9,9 @@
 <body>
     <h1></h1>
     <div class="nav_bar"></div>
-    <div class="side_bar"></div>
+    <div class="side_bar">
+        <button type="button" id="profile_button" class="buttons">Profile</button>
+    </div>
 
     <div class="add_status">
         <input type="text" id="post_status">
@@ -19,6 +21,8 @@
     </div>
         
     <script src="Javascript/addstatus.js"></script>
+    <script src="Javascript/mystatus.js"></script>
+    <script src="Javascript/addlike.js"></script>
     <script src="Javascript/editstatus.js"></script>
     <script src="Javascript/friendstatus.js"></script>
 
