Moved JS functions to another file

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <link href="styles.css" rel="stylesheet">
     <script src="foo.js"></script>
+    <script src="fetch_functions.js"></script>
 </head>
 
 <body>
