Populating the feed section (all statuses)

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </div>
         </div>
 
-        <div class="second-column" id="friends">
+        <div class="second-column" id="column-two">
 
         </div>
 
