--- a/index.html
+++ b/index.html
@@ -4,51 +4,77 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Facebook Clone</title>
+    <link rel="stylesheet" href="CSS/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1></h1>
     <div id="front_page">
-        <h1>Facebook</h1>
-        <p></p>
-        <input type="text" id="email1" placeholder="Enter your Email">
-        <input type="password" id="password1" placeholder="Enter your Password"> 
-        <button type="button" id="signin_button" class="buttons">Log In</button>
-        <button type="button" id="createaccount_button" class="buttons">Creat New Account</button>
+        <div class="maincontainer">
+            <div class="column1">
+                <h1>Faceclone</h1>
+                <h3>Faceclone helps you connect with the people in your life.</h3>
+            </div>
+            <div class="column2">
+                <div id = "loginform">
+                    <input type="text" id="email1" placeholder="Email Address">
+                    <input type="password" id="password1" placeholder="Password"> 
+                    <button type="button" id="signin_button" class="buttons">Log In</button>
+                    <button type="button" id="createaccount_button" class="buttons">Creat New Account</button>
+                </div>
+            </div>
+        </div>
     </div>
     <div id="signup_form">
-        <div class = "input">
-            <input type="text" id = "first_name" placeholder="First Name">
+        <h2>Sign Up</h2>
+        <div class = "signup_row">
+            <div class = "input">
+                <input type="text" id = "first_name" placeholder="First Name">
+            </div>
+            <div class = "input">
+                <input type="text" id = "last_name" placeholder="Last Name">
+            </div>
         </div>
-        <div class = "input">
-            <input type="text" id = "last_name" placeholder="Last Name">
+            
+        <div class = "signup_row">
+            <div class = "input">
+                <input type="text" id = "email2" placeholder="Email">
+            </div>
         </div>
-        <div class = "input">
-            <input type="text" id = "dob" placeholder="Date of Birth">
+        <div class = "signup_row">
+            <div class = "input">
+                <input type="text" id = "password2" placeholder="Password">
+            </div>
         </div>
-        <div class = "input">
-            <input type="text" id = "email2" placeholder="Email">
+        <div class = "signup_row">
+            <div class = "input">
+                <input type="text" id = "dob" placeholder="DD/MM/YYYY">
+            </div>
         </div>
-        <div class = "input">
-            <input type="text" id = "password2" placeholder="Password">
+        <div class = "signup_row">
+            <div class = "input">
+                <label for="profilpicture" id=""picture_label>Select a picture:</label>
+                <input type="file" id="profile_picture" name="profile_picture">
+                <button type="button" id="profilepicture_button" class="buttons">Upload</button>
+            </div> 
         </div>
-        <div class = "input">
-            <label for="profilpicture">Select a picture:</label>
-            <input type="file" id="profile_picture" name="profile_picture">
-            <button type="button" id="profilepicture_button" class="buttons">Upload</button>
-        </div> 
-        <div class = "input">
-            <input type="text" id = "country" placeholder="Country">
+        <div class = "signup_row">
+            <div class = "input">
+                <input type="text" id = "country" placeholder="Country">
+            </div>
+            <div class = "input">
+                <input type="text" id = "city" placeholder="City">    
+            </div>
+            <div class = "input">
+                <input type="text" id = "street" placeholder="Street">
+            </div>
         </div>
-        <div class = "input">
-            <input type="text" id = "city" placeholder="City">
-
+        <div class = "signup_row">
+            <button type="button" id="signup_button" class="buttons">Sign Up</button>
+            <button type="button" id="close_button" class="buttons">Close</button>
         </div>
-        <div class = "input">
-            <input type="text" id = "street" placeholder="Street">
-        </div>
-        <button type="button" id="signup_button" class="buttons">Sign Up</button>
     </div>
+    
 
     <script src="Javascript/signin.js"></script></body>
     <script src="Javascript/signup.js"></script></body>
