--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="styles.css" rel="stylesheet">
     <script src="foo.js"></script>
     <script src="fetch_functions.js"></script>
+    <script src="user.js"></script>
 </head>
 
 <body>
@@ -20,9 +21,9 @@
                 d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z" />
         </svg>
         <div class="wrapper">
-            <div class="searchBar">
-                <input id="searchQueryInput" type="text" name="searchQueryInput" placeholder="Search " value="" />
-                <button id="searchQuerySubmit" type="submit" name="searchQuerySubmit">
+            <div class="searchbar">
+                <input id="searchinput" type="text" placeholder="Search " value="" />
+                <button id="searchsubmit" type="submit">
                     <svg class="search-icon" viewBox="0 0 24 24">
                         <path fill="#666666"
                             d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" />
@@ -30,12 +31,8 @@
                 </button>
             </div>
         </div>
-        <div class="name-nav">Saad Badreddine</div>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="svg-2">
-            <!--! Font Awesome Pro 6.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
-            <path
-                d="M512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256z" />
-        </svg>
+        <div class="name-nav" id="my-name"></div>
+        <img src="" id="profile-picture" class="profile-img">
     </ul>
 
     <div class="parent-container">
@@ -86,6 +83,8 @@
         </div>
 
         <div class="second-column" id="column-two">
+
+            <img src="" alt="" id="test">
 
         </div>
 
