--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="styles.css" rel="stylesheet">
+    <link href="CSS/styles2.css" rel="stylesheet">
     <script src="foo.js"></script>
     <script src="fetch_functions.js"></script>
     <script src="user.js"></script>
