Fixed search for users API

--- a/home.html
+++ b/home.html
@@ -32,7 +32,13 @@
             </div>
         </div>
         <div class="name-nav" id="my-name"></div>
-        <img src="" id="profile-picture" class="profile-img">
+        <div class="image-upload">
+            <label for="file-input">
+                <img src="" id="profile-picture" class="profile-img">
+            </label>
+            <input id="file-input" type="file" />
+        </div>
+
     </ul>
 
     <div class="parent-container">
